<resources>
    <string name="app_name">Naruto Quiz</string>
    <string name="Question1">What is the name of Kakashi’s smallest Ninken?</string>
    <string name="Option1">1.  Urushi\n\n2.  Shiba\n\n3.  Pakkun\n\n4.  Bisuke</string>
    <string name="EditText">Choose Your Answer (1 - 4)</string>
    <string name="submit">Submit</string>
    <string name="you_scored">You Scored :</string>
    <string name="good_job">Good Job!!!!</string>
    <string name="todo">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="chose_your_answer_1_4">Chose Your Answer (1-4)</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>